hphp/hack/test/typecheck/xhp_attr_22.php.exp
File "xhp_attr_22.php", line 14, characters 25-40:
Invalid xhp value for attribute :mysubclass in :foo (Typing[4110])
File "xhp_attr_22.php", line 9, characters 5-12:
This is an object of type Subclass
File "xhp_attr_22.php", line 14, characters 29-38:
It is incompatible with an object of type Superclass
